# Minigame

./: !!open_project.cmd  .gitignore  CMakeLists.txt
cmake/: CMakeLists.txt  add_sources.cmake  project_group.cmake  set_precompiled_header.cmake
common/: basic_defs.h
game_sources/: CMakeLists.txt
game_sources/include/: Application.h  CMakeLists.txt  Entity.h  Game.h  InputController.h  PlayField.h  Player.h  PlayerField.h  ResourceHandler.h  Snowflake.h  TopPanel.h  stdafx.h  stdafx_game.h
game_sources/include/Cutscene/: Character.h  Cutscene.h  TextBox.h
game_sources/include/Entities/: Entity.h  Player.h
game_sources/include/GameField/: HealthPack.h  ItemsHandler.h  PlayField.h  Player.h  Snowflake.h  TopPanel.h
game_sources/include/GameGraphics/: Player.h  RenderEntity.h
game_sources/include/GameStateMachine/: Game.h  GameScene.h  GameScenesID.h  MainMenu.h
game_sources/include/General/: Entity.h  GameListener.h  GameScene.h  InputController.h  ResourceHandler.h  Video.h  VideoSource.h
game_sources/include/MainMenu/: MainMenu.h  PushButton.h  TextEdit.h
game_sources/source/: Application.cpp  CMakeLists.txt  Entity.cpp  Game.cpp  GameListener.cpp  GameState.cpp  InputController.cpp  PlayField.cpp  Player.cpp  PlayerField.cpp  ResourceHandler.cpp  Snowflake.cpp  TopPanel.cpp  main.cpp
game_sources/source/Cutscene/: Character.cpp  Cutscene.cpp  TextBox.cpp
game_sources/source/Entities/: Button.cpp  Entity.cpp  Player.cpp
game_sources/source/GameField/: HealthPack.cpp  ItemsHandler.cpp  PlayField.cpp  Player.cpp  Snowflake.cpp  TopPanel.cpp
game_sources/source/GameGraphics/: Player.cpp  RenderEntity.cpp
game_sources/source/GameStateMachine/: Game.cpp  MainMenu.cpp
game_sources/source/General/: Entity.cpp  GameListener.cpp  GameScene.cpp  InputController.cpp  ResourceHandler.cpp  Video.cpp  VideoSource.cpp
game_sources/source/MainMenu/: MainMenu.cpp  PushButton.cpp  TextEdit.cpp
